ast/src/snapshots/ast__tests__annotation.snap
---
source: ast/src/lib.rs
expression: parsed.unwrap()
---
AstFile {
    package: AstIdentifier {
        range: AstRange {
            start: AstPoint {
                line: 0,
                col: 8,
            },
            end: AstPoint {
                line: 0,
                col: 21,
            },
        },
        value: "ch.emilycares",
    },
    imports: AstImports {
        range: AstRange {
            start: AstPoint {
                line: 1,
                col: 0,
            },
            end: AstPoint {
                line: 1,
                col: 6,
            },
        },
        imports: [],
    },
    thing: Annotation(
        AstAnnotation {
            avaliability: Public,
            name: AstIdentifier {
                range: AstRange {
                    start: AstPoint {
                        line: 1,
                        col: 18,
                    },
                    end: AstPoint {
                        line: 1,
                        col: 28,
                    },
                },
                value: "Annotation",
            },
            fields: [
                AstAnnotationField {
                    range: AstRange {
                        start: AstPoint {
                            line: 2,
                            col: 4,
                        },
                        end: AstPoint {
                            line: 2,
                            col: 26,
                        },
                    },
                    name: AstIdentifier {
                        range: AstRange {
                            start: AstPoint {
                                line: 2,
                                col: 8,
                            },
                            end: AstPoint {
                                line: 2,
                                col: 13,
                            },
                        },
                        value: "value",
                    },
                    jtype: AstJType {
                        range: AstRange {
                            start: AstPoint {
                                line: 2,
                                col: 4,
                            },
                            end: AstPoint {
                                line: 2,
                                col: 7,
                            },
                        },
                        value: Int,
                    },
                    value: Nuget(
                        Int(
                            AstInt {
                                range: AstRange {
                                    start: AstPoint {
                                        line: 2,
                                        col: 24,
                                    },
                                    end: AstPoint {
                                        line: 2,
                                        col: 25,
                                    },
                                },
                                value: 0,
                            },
                        ),
                    ),
                },
                AstAnnotationField {
                    range: AstRange {
                        start: AstPoint {
                            line: 3,
                            col: 4,
                        },
                        end: AstPoint {
                            line: 3,
                            col: 34,
                        },
                    },
                    name: AstIdentifier {
                        range: AstRange {
                            start: AstPoint {
                                line: 3,
                                col: 11,
                            },
                            end: AstPoint {
                                line: 3,
                                col: 15,
                            },
                        },
                        value: "text",
                    },
                    jtype: AstJType {
                        range: AstRange {
                            start: AstPoint {
                                line: 3,
                                col: 4,
                            },
                            end: AstPoint {
                                line: 3,
                                col: 10,
                            },
                        },
                        value: Class(
                            AstIdentifier {
                                range: AstRange {
                                    start: AstPoint {
                                        line: 3,
                                        col: 4,
                                    },
                                    end: AstPoint {
                                        line: 3,
                                        col: 10,
                                    },
                                },
                                value: "String",
                            },
                        ),
                    },
                    value: Nuget(
                        StringLiteral(
                            AstIdentifier {
                                range: AstRange {
                                    start: AstPoint {
                                        line: 3,
                                        col: 26,
                                    },
                                    end: AstPoint {
                                        line: 3,
                                        col: 33,
                                    },
                                },
                                value: "Hello",
                            },
                        ),
                    ),
                },
            ],
        },
    ),
}
