ast/src/snapshots/ast__tests__equasion_method_call.snap
---
source: ast/src/lib.rs
expression: parsed.unwrap()
---
(
    AstExpression {
        range: AstRange {
            start: AstPoint {
                line: 0,
                col: 0,
            },
            end: AstPoint {
                line: 0,
                col: 18,
            },
        },
        ident: Some(
            Value(
                Nuget(
                    StringLiteral(
                        AstIdentifier {
                            range: AstRange {
                                start: AstPoint {
                                    line: 0,
                                    col: 0,
                                },
                                end: AstPoint {
                                    line: 0,
                                    col: 5,
                                },
                            },
                            value: "z",
                        },
                    ),
                ),
            ),
        ),
        values: None,
        next: Some(
            AstExpression {
                range: AstRange {
                    start: AstPoint {
                        line: 0,
                        col: 4,
                    },
                    end: AstPoint {
                        line: 0,
                        col: 18,
                    },
                },
                ident: None,
                values: None,
                next: Some(
                    AstExpression {
                        range: AstRange {
                            start: AstPoint {
                                line: 0,
                                col: 6,
                            },
                            end: AstPoint {
                                line: 0,
                                col: 18,
                            },
                        },
                        ident: Some(
                            Identifier(
                                AstIdentifier {
                                    range: AstRange {
                                        start: AstPoint {
                                            line: 0,
                                            col: 6,
                                        },
                                        end: AstPoint {
                                            line: 0,
                                            col: 7,
                                        },
                                    },
                                    value: "a",
                                },
                            ),
                        ),
                        values: None,
                        next: Some(
                            AstExpression {
                                range: AstRange {
                                    start: AstPoint {
                                        line: 0,
                                        col: 7,
                                    },
                                    end: AstPoint {
                                        line: 0,
                                        col: 18,
                                    },
                                },
                                ident: None,
                                values: None,
                                next: Some(
                                    AstExpression {
                                        range: AstRange {
                                            start: AstPoint {
                                                line: 0,
                                                col: 8,
                                            },
                                            end: AstPoint {
                                                line: 0,
                                                col: 18,
                                            },
                                        },
                                        ident: Some(
                                            Identifier(
                                                AstIdentifier {
                                                    range: AstRange {
                                                        start: AstPoint {
                                                            line: 0,
                                                            col: 8,
                                                        },
                                                        end: AstPoint {
                                                            line: 0,
                                                            col: 16,
                                                        },
                                                    },
                                                    value: "getThing",
                                                },
                                            ),
                                        ),
                                        values: None,
                                        next: Some(
                                            AstExpression {
                                                range: AstRange {
                                                    start: AstPoint {
                                                        line: 0,
                                                        col: 16,
                                                    },
                                                    end: AstPoint {
                                                        line: 0,
                                                        col: 18,
                                                    },
                                                },
                                                ident: None,
                                                values: Some(
                                                    AstValues {
                                                        range: AstRange {
                                                            start: AstPoint {
                                                                line: 0,
                                                                col: 16,
                                                            },
                                                            end: AstPoint {
                                                                line: 0,
                                                                col: 18,
                                                            },
                                                        },
                                                        values: [],
                                                    },
                                                ),
                                                next: None,
                                                operator: None,
                                            },
                                        ),
                                        operator: None,
                                    },
                                ),
                                operator: Dot(
                                    AstRange {
                                        start: AstPoint {
                                            line: 0,
                                            col: 7,
                                        },
                                        end: AstPoint {
                                            line: 0,
                                            col: 8,
                                        },
                                    },
                                ),
                            },
                        ),
                        operator: None,
                    },
                ),
                operator: Plus(
                    AstRange {
                        start: AstPoint {
                            line: 0,
                            col: 4,
                        },
                        end: AstPoint {
                            line: 0,
                            col: 5,
                        },
                    },
                ),
            },
        ),
        operator: None,
    },
    9,
)
